--- a/php/emarket/cart/product/total.phtml
+++ b/php/emarket/cart/product/total.phtml
@@ -9,10 +9,7 @@
 $product = $variables;
 ?>
 
-<div class="col-md-2 col-sm-12 col-xs-12 order_sum sum_rub">
-	<h5 class="gray_text hidden-md hidden-lg">
-		<?= $this->getCommonVar('sumHeader') ?>
-	</h5>
+<div class="order_sum sum_rub">
 
-	<span><?= $this->getTotalPrice($product) ?></span>
+	<span><?= $product['price']['prefix'].ceil($product['price']['actual']).$product['price']['suffix']?> </span>
 </div>
