--- a/php/emarket/delivery/address/item.phtml
+++ b/php/emarket/delivery/address/item.phtml
@@ -20,10 +20,8 @@ $addressLine = $this->getAddressLine($address['id']);
 			required
 		/>
 
-		<span></span>
-
-		<p>
+		<span class="data-form__input__desc">
 			<?= $this->escape($addressLine) ?>
-		</p>
+		</span>
 	</label>
 </div>
