--- a/php/emarket/cart/product/price.phtml
+++ b/php/emarket/cart/product/price.phtml
@@ -20,16 +20,14 @@ $product = $variables;
 
 	<img src="img/char.png" alt="some image" class="char_x">
 
-	<input type="number"
-	       class="quantity"
-	       value="<?= $this->getAmount($product) ?>"
-	       oninput="validity.valid || (value = '');"
-	       min="0"/>
+	<span class="quantity">
+		<?= $this->getAmount($product) ?>
 
-	<?php if ($this->isCartPage()): ?>
-		<span class="change_product_quantity" data-id="<?= $product['id'] ?>">
+		<?php if ($this->isCartPage()): ?>
+			<span class="change_product_quantity" data-id="<?= $product['id'] ?>">
 				<a class="increment_product_quantity">+</a>
 				<a class="decrement_product_quantity">−</a>
 			</span>
-	<?php endif; ?>
+		<?php endif; ?>
+	</span>
 </div>
