--- a/php/emarket/cart/product/suggested_product_list.phtml
+++ b/php/emarket/cart/product/suggested_product_list.phtml
@@ -10,7 +10,7 @@ $product = $variables;
 $suggestedProductList = $this->getSuggestedProducts($product);
 ?>
 
-<?php if (umiCount($suggestedProductList) > 0 && $this->isCartPage()): ?>
+<?php if (count($suggestedProductList) > 0 && $this->isCartPage()): ?>
 	<div class="with_goods hidden-xs hidden-sm">
 		<h3 class="title">
 			<?=$this->translate('suggested_products')?>:
