--- a/php/emarket/cart/product_list.phtml
+++ b/php/emarket/cart/product_list.phtml
@@ -8,10 +8,29 @@
 
 $cart = isset($variables['data']) ? $variables['data'] : $variables;
 $productList = $this->getOrderItems($cart);
+$amount = $cart['total-amount'];
+
+
 ?>
 
+
 <?php foreach ($productList as $index => $product): ?>
-	<div id="<?= "order_item_{$product['id']}" ?>" class="row order_item <?= $this->getBorderClass($index) ?>">
-		<?= $this->render($product, 'emarket/cart/product/index') ?>
-	</div>
+<div class="cart__list__item order_item product-element <?= $this->getBorderClass($index) ?>" data-id="<?= $product["id"]?>" id="<?= "order_item_{$product['id']}" ?>">
+    <?= $this->render($product, 'emarket/cart/product/index') ?>
+</div>
 <?php endforeach; ?>
+
+
+
+<div class="basket_tooltip-price pb-0">
+    
+  	<p class="result_sum">
+		Всего товаров: <span class="count-goods"><?=$amount?></span><br>
+		<!-- <span class="deliveru__summ">Доставка: <span id="order_deliveryPrice">300 руб</span><br></span> -->
+		<br>
+		Итоговая сумма:
+		<span order="price" id="order_price2">
+			<?= $this->getOrderPrice($variables) ?>
+		</span>
+	</p>
+</div>
