--- a/php/emarket/cart/table_title.phtml
+++ b/php/emarket/cart/table_title.phtml
@@ -11,7 +11,7 @@ $this->setCommonVar('discountHeader', $this->getDiscountHeader($variables));
 $this->setCommonVar('sumHeader', $this->getSumHeader($variables));
 ?>
 
-<div class="row table_title hidden-xs hidden-sm">
+<div class="row  hidden-xs hidden-sm">
 	<div class="col-md-2">
 		<p></p>
 	</div>
