--- a/php/emarket/delivery/choose/item.phtml
+++ b/php/emarket/delivery/choose/item.phtml
@@ -7,33 +7,35 @@
  */
 
 $delivery = $variables;
-$price = isset($delivery['price']) ? $delivery['price'] : 0;
-$type = isset($delivery['type-class-name']) ? $delivery['type-class-name'] : '';
-$disabledPaymentIdList = implode(',', $this->getDisabledPaymentIdList($delivery['id']));
+$umiObjects = umiObjectsCollection::getInstance();
+$relationId = $delivery['id'];
+
+
+
+	$relation = $umiObjects->getObject($relationId);
+
+	if ($relation instanceof iUmiObject) {
+		$value = $relation->getValue('description');
+	}
 ?>
 
-<div>
-	<label>
+<div class="data-form__wrapper">
+	<label class="data-form__label">
 		<input
 			type="radio"
 			name="delivery-id"
 			value="<?= $delivery['id'] ?>"
-			data-price="<?= $price ?>"
-			data-type="<?= $type ?>"
-			data-disabledpayments="<?=$disabledPaymentIdList?>"
+            class="data-form__input_type_radio"
+			data-price="<?=$relation->getValue('price')?>"
 			required
 			<?= $this->getRadioStatusByActivity($delivery) ?>
 		/>
+        <span class="checkmark"></span>
+		<span><?= $this->escape($delivery['name']) ?></span>
 
-		<span></span>
-
-		<p>
-			<span>
-				<?= $this->escape($delivery['name']) ?> -
-				<span class="delivery-price">
-					<?= $this->getFormattedDeliveryPrice($delivery) ?>
-				</span>
-			</span>
+		<p class="data-form__input__desc">  
+		<?= $this->escape($value) ?>
+			 
 		</p>
 	</label>
 </div>
