--- a/php/emarket/purchasing_one_step/customer_info.phtml
+++ b/php/emarket/purchasing_one_step/customer_info.phtml
@@ -8,7 +8,7 @@
 ?>
 
 <?php if (isset($variables['onestep']['customer'])): ?>
-	<div class="personal_data del_row">
+	<div class="del_row order_img_3 customer onestep">
 		<div class="del_content">
 			<?= $this->render(['form' => $this->getEditForm($variables['onestep']['customer']['id'])], 'data/form') ?>
 		</div>
