--- a/php/emarket/purchasing_one_step/delivery_choose.phtml
+++ b/php/emarket/purchasing_one_step/delivery_choose.phtml
@@ -10,14 +10,13 @@ $deliveryList = isset($variables['onestep']['delivery_choose']) ? $variables['on
 ?>
 
 <?php if ($deliveryList): ?>
-	<div class="delivery_choose onestep">
-		<div class="del_row">
-			<div class="del_content">
-				<h3 class="up input_capt">
-					<?= $this->translate('delivery_agent') ?>
-				</h3>
-				<?= $this->render($deliveryList, 'emarket/delivery/choose/list') ?>
-			</div>
+	<div class="delivery_choose onestep del_row order_img_1">
+		<div class="del_content">
+			<span class="data-form__title">
+				<?= $this->translate('delivery_agent') ?>
+			</span>
+
+			<?= $this->render($deliveryList, 'emarket/delivery/choose/list') ?>
 		</div>
 	</div>
 <?php endif; ?>
