--- a/php/layout/main.phtml
+++ b/php/layout/main.phtml
@@ -70,11 +70,8 @@
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M0.125 2.25004V0.833374H12.875V2.25004H0.125ZM0.125 7.20837V5.79171H12.875V7.20837H0.125ZM0.125 12.1667V10.75H5.79167V12.1667H0.125ZM12.875 10.75V12.1667H11.1042V13.9375H9.6875V12.1667H7.91667V10.75H9.6875V8.97921H11.1042V10.75H12.875Z"></path>
                 </svg>Сравнение
               </a>
-              <div class="header__basket" onclick="show_popup(&quot;basket&quot;)">
-                <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M5.4 14.4C4.41 14.4 3.6 15.21 3.6 16.2C3.6 17.19 4.41 18 5.4 18C6.39 18 7.2 17.19 7.2 16.2C7.2 15.21 6.39 14.4 5.4 14.4ZM0 0V1.8H1.8L5.04 8.64L3.78 10.8C3.69 11.07 3.6 11.43 3.6 11.7C3.6 12.69 4.41 13.5 5.4 13.5H16.2V11.7H5.76C5.67 11.7 5.58 11.61 5.58 11.52V11.43L6.39 9.89997H13.05C13.77 9.89997 14.31 9.53996 14.58 8.99996L17.82 3.15C18 2.97 18 2.88 18 2.7C18 2.16 17.64 1.8 17.1 1.8H3.78L2.97 0H0ZM14.4 14.4C13.41 14.4 12.6 15.21 12.6 16.2C12.6 17.19 13.41 18 14.4 18C15.39 18 16.2 17.19 16.2 16.2C16.2 15.21 15.39 14.4 14.4 14.4Z"></path>
-                </svg>
-              </div>
+              
+              <?= $this->render($variables, 'layout/header/cart') ?>
               <?php endif; ?>
 
             </div>
@@ -353,7 +350,7 @@
         <div class="footer__contract mobile--hide" onclick="show_popup(&quot;contract&quot;)">Договор оферты</div>
         <div class="footer__privacy mobile--hide" onclick="show_popup(&quot;privacy&quot;)">Политика конфиденциальности</div>
       </div>
-      <p class="footer__copyright">© tvoybasseyn.ru, 2013 - 2020 год</p>
+      <p class="footer__copyright">© tvoybasseyn.ru, 2013 - 2021 год</p>
     </div>
   </div>
 </footer>
