--- a/src/assets/css/blocks/basket.scss
+++ b/src/assets/css/blocks/basket.scss
@@ -73,3 +73,615 @@
         }
     }
 }
+
+
+
+.basket {
+    margin-left: 42px;
+  }
+  
+  .basket_tooltip {
+    &-list {
+      max-height: 300px;
+      overflow-y: auto;
+    }
+  }
+  
+  .order .cart {
+    &.onestep {
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+      background: #FFFFFF;
+      padding: 15px;
+      border-radius: 10px;
+  
+      @media (max-width: 768px) {
+        margin-bottom: 40px;
+      }
+    }
+  
+    &__img {
+      width: 100%;
+      height: auto;
+    }
+  
+    &__show-list {
+      padding: 14px 15px;
+      border-top: 1px solid #C5C5C5;
+      border-bottom: 1px solid #C5C5C5;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #F7F7F7;
+    }
+  
+    &__hide-list {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+  
+      img {
+        transform: rotate(180deg);
+      }
+    }
+  
+    &__show-list-trigger {
+      text-decoration: none;
+      color: #33b5cb;
+      font-weight: 300;
+      line-height: normal;
+      font-size: 12px;
+  
+      &:hover {
+        text-decoration: none;
+      }
+    }
+    .order_item .order_sum span {
+      font-family: 'Circe',sans-serif;
+      font-size: 20px;
+    }
+  
+  }
+  
+  .order_delete {
+    opacity: 0;
+    position: absolute;
+    width: 21px;
+    height: auto;
+    right: 0;
+    cursor: pointer;
+  
+    @media (max-width: 320px) {
+      display: none;
+    }
+  }
+  
+  .cart-counter-icon {
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+  
+  
+    &:hover {
+      path {
+  
+        &:hover,
+        &:active {
+          fill: #e75b9a;
+        }
+      }
+    }
+  
+  
+  }
+  
+  .data-form__wrapper {
+    font-size: 14px;
+  
+    &:last-child {
+      padding-bottom: 36px;
+  
+      @include mobile {
+        padding-bottom: 0;
+      }
+  
+    }
+  }
+  
+  .order_result {
+    input[type="submit"] {
+      width: 190px;
+      font-weight: normal;
+      font-size: 18px;
+  
+      @include mobile {
+        width: 100%;
+      }
+    }
+  }
+  
+  
+  
+  .sub_group_inline {
+    display: flex;
+  
+    div {
+      // max-width: 78px;
+      // margin-right: 31px;
+      margin-top: 1px;
+      width: 50%;
+  
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  
+  .delivery_address .del_content {
+    max-width: 329px;
+  }
+  
+  p.result_sum {
+    margin-top: 9px;
+    font-size: 18px;
+  }
+  
+  .cart__list__item {
+    &:hover {
+      .order_delete {
+        opacity: 1;
+        transition: 0.3s linear;
+      }
+    }
+  }
+  .cart__list__price{
+    display: flex;
+    align-items: center;
+    margin-top: 0;
+    &__value{
+      display: block;
+      min-height: 20px;
+      line-height: 20px;
+      font-size: 20px;
+    }
+  }
+  
+  .basket_tooltip-price {
+    padding-top: 30px;
+    padding-bottom: 100px;
+    text-align: center;
+  background: #fff;
+  
+    .tooltip_price {
+      padding-bottom: 15px;
+      text-align: center;
+      line-height: normal;
+      color: #000000;
+      font-size: 24px;
+      font-weight: 300;
+      span{
+        font-size: 16px;
+      }
+      h3{
+        font-size: 16px;
+      }
+    }
+  
+    button {
+      border: 0;
+      border-radius: 2px;
+      background: #007ad7; 
+      padding: 7px 18px;
+      cursor: pointer;
+      transition: border ease-out 0.25s, color ease-out 0.25s;
+      font-size: 14px;
+  
+      path {
+        transition: fill ease-out 0.25s;
+      }
+  
+      &:hover {
+        filter: brightness(110%);
+      }
+    }
+  }
+  
+  
+  .cart__list {
+    padding-top: 25px;
+  
+    &__item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      padding-bottom: 15px;
+      position: relative;
+  
+  
+      &_mod {
+        padding-right: 75px;
+  
+        @include mobile {
+          padding-right: 40px;
+        }
+  
+      }
+    }
+  
+    &__icon {
+      padding-right: 5px;
+  
+      a {
+        display: block;
+      }
+  
+      .cart__img {
+        max-height: 50px;
+        max-width: 60px;
+        object-fit: contain;
+      }
+    }
+  
+    &__text {
+      width: 180px;
+  
+      @include tablet {
+        padding: 0px 15px;
+      }
+  
+      @include mobile {
+        max-width: 160px;
+        padding-right: 10px;
+      }
+  
+      &__name {
+        display: block;
+        min-height: 29px;
+        line-height: 1.2;
+        font-size: 14px;
+        margin-right: 26px;
+  
+        @include mobile {
+          margin-right: 18px;
+        }
+      }
+  
+      &__desc {
+        color: #6E6E6E;
+        font-size: 12px;
+      }
+    }
+  
+    &__price {
+  
+      @media(max-width: 460px) {
+        min-width: max-content;
+      }
+  
+      &__value {
+        // display: block;
+        // min-height: 29px;
+        // line-height: 13px;
+        // font-size: 18px;
+        display: block;
+        min-height: 20px;
+        line-height: 20px;
+        font-size: 20px;
+        margin-right: 10px;
+      }
+  
+      &__counter {
+        color: #6E6E6E;
+        font-size: 12px;
+        width: max-content;
+        display: inline-block;
+        user-select: none;
+  
+        @media(max-width: 460px) {
+          display: block;
+          min-width: max-content;
+        }
+  
+        &_val {
+          padding: 0 10px;
+        }
+  
+        svg {
+          path {
+            transition: all ease-out 0.25s;
+          }
+  
+          &:hover {
+            path {
+              opacity: 1;
+              fill: #E75B9A;
+            }
+          }
+        }
+  
+        img,
+        svg {
+          cursor: pointer;
+  
+        }
+      }
+    }
+  }
+  
+  form .sub_group_inline > div:last-of-type input {
+    border: 1px solid #ebebeb!important;
+  }
+  .data-form__input_type_text {
+    border: 1px solid #ebebeb !important;
+  }
+  
+  main label input[type="radio"]:checked + span::before {
+    top: 3px!important;
+    left: 3px!important;
+  }
+
+  .data-form {
+    font-size: 14px;
+    .inputs__label::after{
+        display:none;
+    }
+    .inputs__field-wrap{
+        width:100%;
+        margin-bottom: 22.3px;
+    }
+    &__title {
+      font-size: 18px;
+      font-weight: 400;
+      padding-bottom: 20px;
+      display: block;
+  
+      @include mobile {
+        padding-bottom: 0;
+        padding-top: 20px;
+      }
+    }
+  
+    &__input {
+      border-radius: 0;
+  
+      &_type_string {
+        background: transparent;
+        border: 0;
+        border-bottom: 1px solid #ccc;
+        padding: 17px;
+        padding-left: 0px;
+        width: 100%;
+  
+        &::placeholder {
+          color: rgba(0, 0, 0, 0.87);
+          font-size: 14px;
+        }
+      }
+  
+      &_type_radio {
+        background: transparent;
+        border: 0;
+        border-bottom: 1px solid #ccc;
+        padding: 17px;
+        padding-left: 18px;
+        width: 100%;
+      }
+  
+      &_type_radio~.checkmark {
+        background-image: url(/templates/tb_2020/dist/assets/images/radio_off.svg);
+        background-position: center;
+        background-size: contain;
+        display: inline-block;
+        height: 18px;
+        width: 18px;
+        margin: -2px 0px 0px -31px;
+        position: absolute;
+        top: 2px;
+        left: 0;
+  
+        @media (max-width: 768px) {
+          margin: 0;
+        }
+  
+      }
+  
+      &_type_radio:checked~.checkmark {
+        background-image: url(/templates/tb_2020/dist/assets/images/radio_on.svg);
+      }
+  
+      &_type_text {
+        background: transparent;
+        border: 0;
+        border-bottom: 1px solid #ccc;
+        padding: 17px;
+        padding-left: 18px;
+        width: 100%;
+        resize: none;
+  
+      }
+  
+    }
+  
+    &__input__desc {
+      color: #858585;
+      font-size: 14px;
+      display: block;
+      margin-top: 1px;
+      margin-bottom: 0;
+    }
+  
+  
+    &__label {
+      cursor: pointer;
+      margin-left: 30px;
+      margin-bottom: 0;
+      position: relative;
+      line-height: 18px;
+      width: auto;
+      white-space: normal;
+      color: #000;
+      font-weight: 500;
+  
+      @media (max-width: 768px) {
+        margin: 0;
+        padding-left: 30px;
+      }
+  
+      input[type=radio] {
+        display: none;
+      }
+  
+    }
+  
+    &__wrapper {
+      padding-top: 20px;
+    }
+  
+    .sub_text {
+      position: absolute;
+      top: 2px;
+      left: 18px;
+      font-size: 12px;
+      color: #b6b6b6;
+      display: none;
+    }
+  
+    input {
+      width: 100%;
+    }
+  
+    div {
+      position: relative;
+    }
+  
+    div.important:after {
+      content: "*";
+      position: absolute;
+      top: 17px;
+      right: 5px;
+      font-size: 20px;
+      color: #949494;
+    }
+  
+    div input[type="text"]:focus+span.sub_text,
+    div input[type="tel"]:focus+span.sub_text,
+    div input[type="password"]:focus+span.sub_text,
+    div input[type="email"]:focus+span.sub_text,
+    div input[type="number"]:focus+span.sub_text,
+    div input[type="color"]:focus+span.sub_text,
+    div input[type="date"]:focus+span.sub_text {
+      display: block;
+    }
+  
+    :focus::-webkit-input-placeholder {
+      color: transparent;
+    }
+  
+    :focus::-moz-placeholder {
+      color: transparent;
+    }
+  
+    :focus:-moz-placeholder {
+      color: transparent;
+    }
+  
+    :focus:-ms-input-placeholder {
+      color: transparent;
+    }
+  
+  
+    &__max-length-wrap {
+      text-align: right;
+      font-weight: normal;
+      line-height: normal;
+      font-size: 12px;
+      text-align: right;
+      color: rgba(0, 0, 0, 0.38);
+    }
+  
+    &__curr-length {
+      &.max {
+        color: rgba(255, 0, 0, 0.84);
+      }
+    }
+  }
+  
+  .customer {
+    .transparent_btn {
+      display: none;
+    }
+  }
+  
+  
+  .form {
+  
+    &__one-click {
+      & .form-footer {
+        justify-content: flex-end!important;
+  
+        &:after {
+          display: none;
+        }
+  
+        padding: 14px 36px 39px;
+      }
+  
+      .personal_data_wrapper {
+        margin-top: 15px;
+      }
+  
+      .product__properties__item {
+        &>span{
+          &:last-child {
+            display: none;
+          }
+        }
+      }
+    }
+  
+    &__thanks {
+      padding: 25px 15px;
+      text-align: center;
+      font-size: 18px;
+    }
+  
+    &__column {
+      @media (max-width: 768px) {
+        margin-bottom: 25px;
+      }
+    }
+  }
+  
+  #lowPriceModal {
+    .form-group-custom {
+      padding-left: 0;
+    }
+  
+    .form-footer{
+      justify-content: flex-end;
+    }
+  
+    textarea {
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #212529;
+      padding: 20px 0 0;
+  
+      &::placeholder{
+        padding: 0;
+        font: 400 14px 'Roboto', sans-serif;
+        color: #212529;
+      }
+    }
+  }
+
+.form__column,.delivery__map {
+  @include desktop{
+    padding-right: 30px;
+  }
+    
+}
+.contacts__map {
+  width: 100%;
+}
